# footbal_analysis

./: .gitignore  README.md  TestingAPICall.ipynb  dataset_management_methods.py  main.py  mkdocs.yml  pfr_scraping_methods.py  pyproject.toml  requirements.txt  test.py  testing.py
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yaml
docs/: dataset_management_methods.md  index.md  pfr_scraping_methods.md
expected_data/: geno.csv  mahomes.csv  tlaw.csv
my-project/: mkdocs.yml
my-project/docs/: index.md
tests/: test_hw1.py  test_tests.py
